RetailDevGit/src/objects/ARM_Brand__c.object
<CustomObject>
    <description>Appirio Retail Management (ARM) Object</description>
    <fields>
        <fullName>Brand_Type__c</fullName>
        <label>Brand Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Classification</fullName>
                </value>
                <value>
                    <fullName>Group / Type</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Brand Variant</fullName>
                </value>
                <value>
                    <fullName>Individual Variant</fullName>
                </value>
                <value>
                    <fullName>Volume</fullName>
                </value>
                <value>
                    <fullName>Configuration &amp; Container</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hierarchy_Code__c</fullName>
        <externalId>true</externalId>
        <label>Full Hierarchy Code</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <formula>IF( ISBLANK(Hierarchy_Code__c), &quot;NH&quot;,
IF(  ISPICKVAL( Brand_Type__c , &quot;Classification&quot;), &quot;L1&quot;,  
        IF(  ISPICKVAL( Brand_Type__c , &quot;Group / Type&quot;), &quot;L2&quot;, 
             IF(  ISPICKVAL( Brand_Type__c , &quot;Brand&quot;), &quot;L3&quot;, 
            	  IF(  ISPICKVAL( Brand_Type__c , &quot;Brand Variant&quot;), &quot;L4&quot;, 
                	IF(  ISPICKVAL( Brand_Type__c , &quot;Individual Variant&quot;), &quot;L5&quot;, 
			     IF(  ISPICKVAL( Brand_Type__c , &quot;Volume&quot;), &quot;L6&quot;, &quot;L7&quot;)))))))</formula>
        <label>Level #</label>
        <type>Text</type>
    </fields>
    <label>Brand</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARM Brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>